# horus-assurances

./: .gitattributes  .gitignore  README.md
backend/: .env.example  manage.py  pyproject.toml  pytest.ini
backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/ass_api/: admin.py  applicationtiers.py  apps.py  client.py  models.py  sanitizers.py
backend/apps/audit/: admin.py  models.py  serializers.py  services.py  views.py
backend/apps/clients/: admin.py  messages.py  models.py  portal.py  serializers.py  views.py
backend/apps/commissions/: admin.py  models.py  serializers.py  services.py  views.py
backend/apps/common/: pagination.py  production.py  serializers.py  views.py
backend/apps/contracts/: admin.py  ass_payloads.py  documents.py  models.py  serializers.py  services.py  trailers.py  views.py
backend/apps/groups/: admin.py  models.py  serializers.py  views.py
backend/apps/notifications/: admin.py  models.py  serializers.py  services.py  views.py
backend/apps/payments/: admin.py  models.py  serializers.py  services.py  views.py  webhooks.py
backend/apps/quotes/: admin.py  ass_payloads.py  models.py  serializers.py  services.py  views.py
backend/apps/reference_data/: admin.py  models.py  serializers.py  services.py  views.py
backend/apps/vehicles/: admin.py  models.py  serializers.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  production.py  test.py
backend/requirements/: base.txt  test.txt
(+116 files in other folders)
