[project]
name = "horus-assurances-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "django==5.2.6",
    "django-filter==25.2",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.1",
    "psycopg2-binary==2.9.11",
    "python-decouple==3.8",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-django==4.9.0",
]
